# chk_software

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  chk_software.cpp  chk_software.h  clang-format.txt  cpp.hint
ext/: CMakeLists.txt
src/: chk_colors.cpp  chk_colors.h  chk_command_list.h  chk_common.cpp  chk_common.h  chk_dbg.cpp  chk_dbg.h  chk_math.h  chk_software.cpp  chk_software.h  chk_window.cpp  chk_window.h
src/common/: chk_arena.h  chk_colors.cpp  chk_colors.h  chk_common.cpp  chk_common.h  chk_dbg.cpp  chk_dbg.h  chk_math.cpp  chk_math.h  chk_path.cpp  chk_path.h
src/renderer/: chk_bitmap.cpp  chk_bitmap.h  chk_command_list.h  chk_renderer.h
src/soft/: chk_opengl.cpp  chk_opengl.h  chk_soft_renderer.cpp  chk_soft_renderer.h
src/window/: chk_window.cpp  chk_window.h
